[FEATURE] Add configuration option to disable cache purging

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -1,5 +1,6 @@
 MOC:
   Varnish:
+    enableCacheBanningWhenNodePublished: true
     cacheHeaders:
       defaultSharedMaximumAge: 86400
     varnishUrl: http://127.0.0.1/
