--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -4,3 +4,16 @@ MOC:
     cacheHeaders:
       defaultSharedMaximumAge: 86400
     varnishUrl: http://127.0.0.1/
+
+
+TYPO3:
+  Neos:
+    modules:
+      administration:
+        submodules:
+          purging:
+            label: 'Varnish cache purging'
+            controller: '\MOC\Varnish\Controller\VarnishCacheController'
+            description: "Clear Varnish cache."
+            icon: 'icon-gear'
+            resource: 'MOC_Varnish_Backend_Module_Varnish_ClearCache'
