--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -1,10 +1,9 @@
 MOC:
   Varnish:
-    enableCacheBanningWhenNodePublished: true
+    enableCacheBanningWhenNodePublished: TRUE
     cacheHeaders:
       defaultSharedMaximumAge: 86400
     varnishUrl: http://127.0.0.1/
-
 
 TYPO3:
   Neos:
@@ -14,6 +13,6 @@ TYPO3:
           purging:
             label: 'Varnish cache purging'
             controller: '\MOC\Varnish\Controller\VarnishCacheController'
-            description: "Clear Varnish cache."
+            description: 'Clear Varnish cache.'
             icon: 'icon-gear'
             resource: 'MOC_Varnish_Backend_Module_Varnish_ClearCache'
