[TASK] Don't send a 0 s-maxage for a NULL default shared maximum age

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -2,7 +2,7 @@ MOC:
   Varnish:
     enableCacheBanningWhenNodePublished: TRUE
     cacheHeaders:
-      defaultSharedMaximumAge: NULL
+      defaultSharedMaximumAge: ~
     varnishUrl: http://127.0.0.1/
 
 TYPO3:
