--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 		}
 	],
 	"require": {
-		"typo3/flow": "*"
+		"typo3/flow": "*",
+		"friendsofsymfony/http-cache": "~1.3"
 	},
 	"autoload": {
 		"psr-0": {
