--- a/Configuration/Caches.yaml
+++ b/Configuration/Caches.yaml
@@ -1,3 +1,9 @@
 TYPO3_TypoScript_Content:
   # Set up a special cache frontend to store metadata (tags, lifetime) in entries
   frontend: MOC\Varnish\Cache\MetadataAwareStringFrontend
+
+Moc_Varnish_Site_Token:
+  frontend: TYPO3\Flow\Cache\Frontend\StringFrontend
+  backend: TYPO3\Flow\Cache\Backend\SimpleFileBackend
+  backendOptions:
+    cacheDirectory: '%FLOW_PATH_DATA%Persistent/MocVarnishSiteToken'
