--- a/Configuration/Objects.yaml
+++ b/Configuration/Objects.yaml
@@ -7,3 +7,13 @@ MOC\Varnish\Service\CacheControlService:
         arguments:
           1:
             value: TYPO3_TypoScript_Content
+
+MOC\Varnish\Service\TokenStorage:
+  properties:
+    cache:
+      object:
+        factoryObjectName: TYPO3\Flow\Cache\CacheManager
+        factoryMethodName: getCache
+        arguments:
+          1:
+            value: Moc_Varnish_Site_Token
