[BUGFIX] Prevent memory exhaustion from reflecting Guzzle/Guzzle package

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -28,3 +28,4 @@ TYPO3:
     object:
       excludeClasses:
         'friendsofsymfony.httpcache': ['FOS\\HttpCache\\.*']
+        'guzzle.guzzle': ['Guzzle\\.*']
