--- a/Configuration/Views.yaml
+++ b/Configuration/Views.yaml
@@ -1,6 +1,6 @@
 # use TYPO3.Neos layouts and partials when dispatching controllers inside the Neos modules
 -
-  requestFilter: 'mainRequest.isPackage("TYPO3.Neos") && isPackage("MOC.Varnish") && isController("VarnishCache")'
+  requestFilter: 'mainRequest.isPackage("TYPO3.Neos") && isFormat("html") && isPackage("MOC.Varnish") && isController("VarnishCache")'
   options:
     'layoutRootPaths': ['resource://TYPO3.Neos/Private/Layouts']
     'partialRootPaths': ['resource://MOC.Varnish/Private/Partials', 'resource://TYPO3.Neos/Private/Partials']
