--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		}
 	],
 	"require": {
-		"typo3/flow": "*",
+		"typo3/neos": "~1.2",
 		"friendsofsymfony/http-cache": "~1.3"
 	},
 	"autoload": {
