--- a/.travis.yml
+++ b/.travis.yml
@@ -16,20 +16,23 @@ before_script:
           "bin-dir": "bin"
       },
       "require": {
-          "typo3/neos": "1.2.*",
-          "typo3/neos-nodetypes": "1.2.*",
-          "typo3/neosdemotypo3org": "1.2.*",
-          "typo3/neos-kickstarter": "1.2.*",
-          "doctrine/migrations": "1.0.0-alpha3",
-          "typo3/flow": "2.3.*",
+          "typo3/neos": "2.0.*@beta",
+          "doctrine/migrations": "@dev",
+          "typo3/typo3cr": "2.0.*@beta",
+          "typo3/typoscript": "2.0.*@beta",
+          "typo3/media": "2.0.*@beta",
+          "typo3/flow": "3.0.*@beta",
+          "typo3/fluid": "3.0.*@beta",
+          "typo3/eel": "3.0.*@beta",
+          "typo3/party": "3.0.*@beta",
+          "typo3/kickstart": "3.0.*@beta",
           "moc/varnish": "dev-${TRAVIS_BRANCH}#${TRAVIS_COMMIT}"
       },
       "require-dev": {
-          "typo3/buildessentials": "2.3.*",
+          "typo3/buildessentials": "3.0.*@beta",
           "mikey179/vfsstream": "1.5.*",
           "phpunit/phpunit": "4.6.*",
-          "flowpack/behat": "dev-master",
-          "typo3-ci/typo3flow": "dev-master"
+          "flowpack/behat": "dev-master"
       },
       "scripts": {
           "post-update-cmd": "TYPO3\\\\Flow\\\\Composer\\\\InstallerScripts::postUpdateAndInstall",
@@ -38,7 +41,6 @@ before_script:
           "post-package-install": "TYPO3\\\\Flow\\\\Composer\\\\InstallerScripts::postPackageUpdateAndInstall"
       }
     }
-  - cat composer.json
-  - composer update --dev
+  - composer update
 
 script: bin/phpunit -c Build/BuildEssentials/PhpUnit/UnitTests.xml Packages/Application/MOC.Varnish/Tests/Unit
