--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "moc/varnish",
 	"type": "typo3-flow-package",
-	"license": "LGPL-3.0+",
+	"license": "MIT",
 	"description": "Varnish integration for Neos",
 	"authors": [
 		{
