--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 		}
 	],
 	"require": {
-		"typo3/neos": "~2.0",
+		"typo3/neos": "~2.0, dev-master",
 		"friendsofsymfony/http-cache": "~1.3"
 	},
 	"autoload": {
