--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -1,13 +1,13 @@
 MOC:
   Varnish:
+    # URL or URLs (if array) Varnish is running on for purge requests (skip trailing slash)
+    varnishUrl: 'http://127.0.0.1'
     # Cache header sending configuration
     cacheHeaders:
       # Default and maximum TTL in seconds
       defaultSharedMaximumAge: ~
       # Disable sending headers (useful for staging environments)
       disabled: FALSE
-    # URL varnish is running on for purge requests
-    varnishUrl: 'http://127.0.0.1'
     # Port to use for reverse lookup in backend module
     reverseLookupPort: ~
     # List of ignored  cache tags to skip when flushing caches by tag, e.g. 'TYPO3.Neos:Document' which is used in 'TYPO3.Neos:Menu' elements
