--- a/Configuration/Policy.yaml
+++ b/Configuration/Policy.yaml
@@ -4,7 +4,7 @@ privilegeTargets:
       matcher: 'within(MOC\Varnish\Controller\VarnishCacheController) && method(public .*->(?!initialize).*Action())'
 
 roles:
-  'TYPO3.Flow:Everybody':
+  'TYPO3.Neos:Editor':
     privileges:
       -
         privilegeTarget: 'MOC.Varnish:BackendModuleClearCache'
