--- a/Configuration/Policy.yaml
+++ b/Configuration/Policy.yaml
@@ -3,6 +3,6 @@ resources:
     MOC_Varnish_Backend_Module_Varnish_ClearCache: 'method(MOC\Varnish\Controller\VarnishCacheController->.*Action())'
 
 acls:
-  'TYPO3.Neos:Administrator':
+  'TYPO3.Neos:Editor':
     methods:
       MOC_Varnish_Backend_Module_Varnish_ClearCache: GRANT
