--- a/.travis.yml
+++ b/.travis.yml
@@ -17,23 +17,13 @@ before_script:
           "bin-dir": "bin"
       },
       "require": {
-          "typo3/neos": "2.0.*@beta",
-          "doctrine/migrations": "@dev",
-          "typo3/typo3cr": "2.0.*@beta",
-          "typo3/typoscript": "2.0.*@beta",
-          "typo3/media": "2.0.*@beta",
-          "typo3/flow": "3.0.*@beta",
-          "typo3/fluid": "3.0.*@beta",
-          "typo3/eel": "3.0.*@beta",
-          "typo3/party": "3.0.*@beta",
-          "typo3/kickstart": "3.0.*@beta",
+          "typo3/neos": "~2.0",
           "moc/varnish": "${VERSION}"
       },
       "require-dev": {
-          "typo3/buildessentials": "3.0.*@beta",
+          "typo3/buildessentials": "~3.0",
           "mikey179/vfsstream": "1.5.*",
-          "phpunit/phpunit": "4.6.*",
-          "flowpack/behat": "dev-master"
+          "phpunit/phpunit": "4.6.*"
       },
       "scripts": {
           "post-update-cmd": "TYPO3\\\\Flow\\\\Composer\\\\InstallerScripts::postUpdateAndInstall",
@@ -42,7 +32,7 @@ before_script:
           "post-package-install": "TYPO3\\\\Flow\\\\Composer\\\\InstallerScripts::postPackageUpdateAndInstall"
       }
     }
-  - cat composer.json 
+  - cat composer.json
   - composer update
 
 script: bin/phpunit -c Build/BuildEssentials/PhpUnit/UnitTests.xml Packages/Application/MOC.Varnish/Tests/Unit
