[BUGFIX] Set site token cache timeout to infinite

--- a/Configuration/Caches.yaml
+++ b/Configuration/Caches.yaml
@@ -7,4 +7,5 @@ Moc_Varnish_Site_Token:
   backend: TYPO3\Flow\Cache\Backend\SimpleFileBackend
   backendOptions:
     cacheDirectory: '%FLOW_PATH_DATA%Persistent/MocVarnishSiteToken'
+    defaultLifetime: 0
   persistent: true
