--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: php
 php:
   - 5.5
   - 5.6
+  - 7.0
 
 before_script:
   - env
@@ -17,15 +18,15 @@ before_script:
           "bin-dir": "bin"
       },
       "require": {
-          "typo3/neos": "1.2.*",
+          "typo3/neos": "~1.2",
           "doctrine/migrations": "1.0.0-alpha3",
-          "typo3/flow": "2.3.*",
+          "typo3/flow": "~2.3",
           "moc/varnish": "${VERSION}"
       },
       "require-dev": {
-          "typo3/buildessentials": "2.3.*",
-          "mikey179/vfsstream": "1.5.*",
-          "phpunit/phpunit": "4.6.*",
+          "typo3/buildessentials": "~2.3",
+          "mikey179/vfsstream": "~1.6",
+          "phpunit/phpunit": "~4.8 || ~5.2.0",
           "flowpack/behat": "dev-master"
       },
       "scripts": {
