--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,7 @@ before_script:
       "require-dev": {
           "typo3/buildessentials": "~2.3",
           "mikey179/vfsstream": "~1.6",
-          "phpunit/phpunit": "~4.8 || ~5.2.0",
-          "flowpack/behat": "dev-master"
+          "phpunit/phpunit": "~4.8 || ~5.2.0"
       },
       "scripts": {
           "post-update-cmd": "TYPO3\\\\Flow\\\\Composer\\\\InstallerScripts::postUpdateAndInstall",
