--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -1,6 +1,6 @@
 MOC:
   Varnish:
-    # Disable varnish caching at all if FALSE
+    # Disables Varnish caching if set to FALSE
     enabled: TRUE
     # URL or URLs (if array) Varnish is running on for purge requests (skip trailing slash)
     varnishUrl: 'http://127.0.0.1'
