--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,48 @@
 {
-	"name": "moc/varnish",
-	"type": "typo3-flow-package",
-	"license": "MIT",
-	"description": "Varnish integration for Neos",
-	"keywords": [ "http", "proxy", "caching", "purge", "invalidation", "varnish", "neos", "flow" ],
-	"authors": [
-		{
-			"name": "Jan-Erik Revsbech",
-			"email": "janerik@moc.net"
-		},
-		{
-			"name": "Aske Ertmann",
-			"email": "aske@moc.net"
-		},
-		{
-			"name": "Christopher Hlubek",
-			"email": "hlubek@networkteam.com"
-		},
-		{
-			"name": "Christoph Lehmann",
-			"email": "lehmann@networkteam.com"
-		}
-	],
-	"require": {
-		"typo3/neos": ">=2.2",
-		"friendsofsymfony/http-cache": "~1.3"
-	},
-	"autoload": {
-		"psr-0": {
-			"MOC\\Varnish": "Classes"
-		}
-	}
+    "name": "moc/varnish",
+    "type": "typo3-flow-package",
+    "license": "MIT",
+    "description": "Varnish integration for Neos",
+    "keywords": [
+        "http",
+        "proxy",
+        "caching",
+        "purge",
+        "invalidation",
+        "varnish",
+        "neos",
+        "flow"
+    ],
+    "authors": [
+        {
+            "name": "Jan-Erik Revsbech",
+            "email": "janerik@moc.net"
+        },
+        {
+            "name": "Aske Ertmann",
+            "email": "aske@moc.net"
+        },
+        {
+            "name": "Christopher Hlubek",
+            "email": "hlubek@networkteam.com"
+        },
+        {
+            "name": "Christoph Lehmann",
+            "email": "lehmann@networkteam.com"
+        }
+    ],
+    "require": {
+        "typo3/neos": ">=2.2",
+        "friendsofsymfony/http-cache": "~1.3"
+    },
+    "autoload": {
+        "psr-0": {
+            "MOC\\Varnish": "Classes"
+        }
+    },
+    "extra": {
+        "applied-flow-migrations": [
+            "TYPO3.FLOW3-201201261636"
+        ]
+    }
 }
