TASK: Apply migration Neos.Flow-20161124204700
Adjusts code to package renaming from "TYPO3.Flow" to "Neos.Flow"

--- a/Configuration/Policy.yaml
+++ b/Configuration/Policy.yaml
@@ -1,5 +1,5 @@
 privilegeTargets:
-  'TYPO3\Flow\Security\Authorization\Privilege\Method\MethodPrivilege':
+  'Neos\Flow\Security\Authorization\Privilege\Method\MethodPrivilege':
     'MOC.Varnish:BackendModuleClearCache':
       matcher: 'within(MOC\Varnish\Controller\VarnishCacheController) && method(public .*->(?!initialize).*Action())'
 
