--- a/Configuration/Caches.yaml
+++ b/Configuration/Caches.yaml
@@ -3,8 +3,8 @@ TYPO3_TypoScript_Content:
   frontend: MOC\Varnish\Cache\MetadataAwareStringFrontend
 
 Moc_Varnish_Site_Token:
-  frontend: TYPO3\Flow\Cache\Frontend\StringFrontend
-  backend: TYPO3\Flow\Cache\Backend\SimpleFileBackend
+  frontend: Neos\Flow\Cache\Frontend\StringFrontend
+  backend: Neos\Flow\Cache\Backend\SimpleFileBackend
   backendOptions:
     cacheDirectory: '%FLOW_PATH_DATA%Persistent/MocVarnishSiteToken'
     defaultLifetime: 0
