TASK: Apply migration Neos.Neos-20161220163741
Migrate usages of the Settings path Neos.Neos.typoScript to
Neos.Neos.fusion

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -30,6 +30,6 @@ Neos:
               styleSheets:
                 - 'resource://MOC.Varnish/Public/Styles/Module.css'
             privilegeTarget: 'MOC.Varnish:BackendModuleClearCache'
-    typoScript:
+    fusion:
       autoInclude:
         MOC.Varnish: true
