TASK: Apply migration Neos.Neos-20161125002322
Adjusts code to package renaming from "TYPO3.Neos" to "Neos.Neos"

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -16,7 +16,7 @@ MOC:
         severityThreshold: '%LOG_INFO%'
         maximumLogFileSize: 1048576
         logFilesToKeep: 1
-TYPO3:
+Neos:
   Neos:
     modules:
       administration:
