--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -1,4 +1,4 @@
-'TYPO3.Neos:Document':
+'Neos.Neos:Document':
   ui:
     inspector:
       groups:
@@ -23,4 +23,4 @@
         inspector:
           group: 'caching'
       validation:
-        'TYPO3.Neos/Validation/IntegerValidator': []
+        'Neos.Neos/Validation/IntegerValidator': []
