TASK: Update PHPUnit version

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
       "require-dev": {
           "typo3/buildessentials": "~4.0",
           "mikey179/vfsstream": "~1.6",
-          "phpunit/phpunit": "~4.8 || ~5.4.0"
+          "phpunit/phpunit": "~5.4.0"
       },
       "scripts": {
           "post-update-cmd": "Neos\\\\Flow\\\\Composer\\\\InstallerScripts::postUpdateAndInstall",
