--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         }
     ],
     "require": {
-        "typo3/neos": "^3.0",
+        "neos/neos": "^3.0",
         "friendsofsymfony/http-cache": "~1.3"
     },
     "autoload": {
