--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,7 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "neos/neos": "~3.0.4 || ^3.1.2",
+        "neos/neos": "^3.2",
         "friendsofsymfony/http-cache": "~1.3"
     },
     "autoload": {
