TASK: Adjust composer email

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         },
         {
             "name": "Aske Ertmann",
-            "email": "aske@moc.net"
+            "email": "aske@ertmann.co"
         },
         {
             "name": "Christopher Hlubek",
