--- a/Configuration/Objects.yaml
+++ b/Configuration/Objects.yaml
@@ -17,3 +17,11 @@ MOC\Varnish\Service\TokenStorage:
         arguments:
           1:
             value: Moc_Varnish_Site_Token
+
+Psr\Log\LoggerInterface:
+  scope: singleton
+  factoryObjectName: Neos\Flow\Log\PsrLoggerFactoryInterface
+  factoryMethodName: get
+  arguments:
+    1:
+      value: systemLogger
