--- a/Configuration/Views.yaml
+++ b/Configuration/Views.yaml
@@ -1,6 +1,6 @@
 # use Neos.Neos layouts and partials when dispatching controllers inside the Neos modules
 -
-  requestFilter: 'mainRequest.isPackage("Neos.Neos") && isFormat("html") && isPackage("MOC.Varnish") && isController("VarnishCache")'
+  requestFilter: 'mainRequest.isPackage("Neos.Neos") && isFormat("html") && isPackage("Flowpack.Varnish") && isController("VarnishCache")'
   options:
     'layoutRootPaths': ['resource://Neos.Neos/Private/Layouts']
-    'partialRootPaths': ['resource://MOC.Varnish/Private/Partials', 'resource://Neos.Neos/Private/Partials']
+    'partialRootPaths': ['resource://Flowpack.Varnish/Private/Partials', 'resource://Neos.Neos/Private/Partials']
