--- a/composer.json
+++ b/composer.json
@@ -13,32 +13,14 @@
         "neos",
         "flow"
     ],
-    "authors": [
-        {
-            "name": "Jan-Erik Revsbech",
-            "email": "janerik@flowpack.net"
-        },
-        {
-            "name": "Aske Ertmann",
-            "email": "aske@ertmann.co"
-        },
-        {
-            "name": "Christopher Hlubek",
-            "email": "hlubek@networkteam.com"
-        },
-        {
-            "name": "Christoph Lehmann",
-            "email": "lehmann@networkteam.com"
-        }
-    ],
     "require": {
-        "neos/neos": "^5.0",
-        "friendsofsymfony/http-cache": "~2.0",
-        "php-http/curl-client": "~1"
+        "neos/neos": "^7.0",
+        "friendsofsymfony/http-cache": "^2.0",
+        "php-http/curl-client": "^1"
     },
     "autoload": {
         "psr-4": {
-            "FLOWPACK\\Varnish\\": "Classes"
+            "Flowpack\\Varnish\\": "Classes"
         }
     },
     "extra": {
