--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
       "require-dev": {
           "neos/buildessentials": "~5.0",
           "mikey179/vfsstream": "~1.6",
-          "phpunit/phpunit": "~7.1.0"
+          "phpunit/phpunit": "^9.0",
       },
       "scripts": {
           "post-update-cmd": "Neos\\\\Flow\\\\Composer\\\\InstallerScripts::postUpdateAndInstall",
