FEATURE: Allow comma separated values for varnish backends
This can be used, to pass a list of varnish servers given from an
environment variable.

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -3,7 +3,7 @@ Flowpack:
     # Disables Varnish caching if set to false
     enabled: true
 
-    # URL or URLs (if array) Varnish is running on for purge requests (skip trailing slash)
+    # URL or URLs as comma separated value or array, Varnish is running on for purge requests (skip trailing slash)
     varnishUrl: 'http://127.0.0.1'
 
     # Cache header sending configuration
