--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "flow"
     ],
     "require": {
-        "neos/neos": "^7.0",
+        "neos/neos": "^7.0 || ^8.0",
         "friendsofsymfony/http-cache": "^2.0",
         "php-http/curl-client": "^2.2"
     },
@@ -25,7 +25,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "4.0.x-dev"
+            "dev-master": "4.1.x-dev"
         },
         "applied-flow-migrations": [
             "TYPO3.FLOW3-201201261636",
